--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@octokit/rest": "^21.0.2",
+    "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.62.2",
     "class-variance-authority": "^0.7.1",
