--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.1.0",
     "@octokit/rest": "^21.0.2",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.0",
